--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,9 @@
 
     <div class="container">
       <% flash.each do |key, value| %>
-        <div class="alert alert-<%= key %>"><%= value %></div>
+        <%= content_tag(:div, value, class: "alert alert-#{key}") %>
+        <!--<div class="alert alert-<%= key %>"><%= value %></div> 
+        равносильно строке выше-->
       <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
